--- a/www/index.html
+++ b/www/index.html
@@ -25,13 +25,13 @@
             </div>
             <div class="container">
                 <header class="navigation">header</header>
-                <div class="content-body">
-                    <div class="content-wrapper">
-                        <div class="content">content</div>
+                <div class="content-wrapper">
+                    <div class="content">
+                        <div class="content-inner">content</div>
                     </div>
-                    <div class="view-wrapper">
-                        <div class="view">
-                            <header class="view-navbar">view</header>
+                    <div class="view">
+                        <div class="view-inner">
+                            <header class="view-navbar">view-navbar</header>
                             <div class="view-content">view-content</div>
                             <footer class="view-toolbox">toolbox</footer>
                         </div>
