--- a/www/index.html
+++ b/www/index.html
@@ -11,6 +11,7 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
+        <meta charset="utf-8">
         <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *">
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
@@ -19,26 +20,39 @@
         <title>rnote</title>
     </head>
     <body>
-        <div class="app">
-            <div class="sidebar">
+        <div id="app">
+            <div id="sidebar" active="off">
+                <button class="sidebar-close">메뉴닫기</button>
                 side-bar
             </div>
-            <div class="container">
-                <header class="navigation">header</header>
-                <div class="content-wrapper">
-                    <div class="content">
-                        <div class="content-inner">content</div>
+            <div id="container">
+                <header id="navigation">
+                    <div class="panel">
+                        <button class="box sidebar-open">메뉴호출</button>
+                        <div class="box label-title">navigation</div>
+                        <button class="box view-open">상세화면호출</button>
                     </div>
-                    <div class="view">
-                        <div class="view-inner">
-                            <header class="view-navbar">view-navbar</header>
-                            <div class="view-content">view-content</div>
-                            <footer class="view-toolbox">toolbox</footer>
+                </header>
+                <div id="content">
+                    <div id="list">
+                        <div id="list-inner">list</div>
+                    </div>
+                    <div id="view" edit="off" active="off">
+                        <div id="view-inner">
+                            <header id="view-navbar">
+                                <div class="panel">
+                                    <button class="box nav-back">돌아가기</button>
+                                    view-navbar
+                                </div>
+                            </header>
+                            <div id="view-content">view-content</div>
+                            <footer id="view-toolbox">view-toolbox</footer>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        <script type="text/javascript" src="js/test.js"></script>
         <script type="text/javascript" src="cordova.js"></script>
     </body>
 </html>
