--- a/www/index.html
+++ b/www/index.html
@@ -19,6 +19,7 @@
         <title>rnote</title>
         <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
         <link rel="import" href="bower_components/polymer/polymer.html">
+        <link rel="import" href="bower_components/paper-toolbar/paper-toolbar.html">
     </head>
     <body>
         <div id="app">
@@ -28,11 +29,16 @@
             </div>
             <div id="container">
                 <header id="navigation">
-                    <div class="panel">
+                    <!-- <div class="panel">
                         <button class="box sidebar-open">메뉴호출</button>
                         <div class="box label-title">navigation</div>
                         <button class="box view-open">상세화면호출</button>
-                    </div>
+                    </div> -->
+                    <paper-toolbar>
+                      <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
+                      <div class="title">Title</div>
+                      <paper-icon-button icon="more-vert" on-tap="moreAction"></paper-icon-button>
+                    </paper-toolbar>
                 </header>
                 <div id="content">
                     <div id="list">
