--- a/app/index.html
+++ b/app/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <head>
 
-        <!--
+<head>
+
+    <!--
         Customize this policy to fit your own app's needs. For more guidance, see:
             https://github.com/apache/cordova-plugin-whitelist/blob/master/README.md#content-security-policy
         Some notes:
@@ -11,22 +12,23 @@
             * Disables use of inline scripts in order to mitigate risk of XSS vulnerabilities. To change this:
                 * Enable inline JS: add 'unsafe-inline' to default-src
         -->
-        <meta charset="utf-8">
-        <meta name="format-detection" content="telephone=no">
-        <meta name="msapplication-tap-highlight" content="no">
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
-        <title>rnote</title>
-        <!-- IE required -->
-        <script src="modules/es6-shim.js"></script>
-        <script src="modules/system-polyfills.js"></script>
-        <!-- Angular2 -->
-        <script src="modules/angular2-polyfills.js"></script>
-        <script src="modules/system.src.js"></script>
-        <script src="modules/Rx.js"></script>
-        <script src="modules/angular2.js"></script>
-        <!-- Configure SystemJS -->
-        <script>
+    <meta charset="utf-8">
+    <meta name="format-detection" content="telephone=no">
+    <meta name="msapplication-tap-highlight" content="no">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+    <title>rnote</title>
+    <!-- IE required -->
+    <script src="modules/es6-shim.js"></script>
+    <script src="modules/system-polyfills.js"></script>
+    <!-- Angular2 -->
+    <script src="modules/angular2-polyfills.js"></script>
+    <script src="modules/system.src.js"></script>
+    <script src="modules/Rx.js"></script>
+    <script src="modules/angular2.js"></script>
+    <script src="modules/router.js"></script>
+    <!-- Configure SystemJS -->
+    <script>
         System.config({
             packages: {
                 app: {
@@ -37,43 +39,22 @@
         });
         System.import('bootstrap')
             .then(null, console.error.bind(console));
-        </script>
-    </head>
-    <body>
-        <div id="app">
-            <div id="sidebar" active="off">
-                <button class="sidebar-close">메뉴닫기</button>
-                side-bar
-            </div>
-            <div id="container">
-                <header id="navigation">
-                    <div class="panel">
-                        <button class="box sidebar-open">메뉴호출</button>
-                        <div class="box label-title">navigation</div>
-                        <button class="box view-open">상세화면호출</button>
-                    </div>
+    </script>
+</head>
 
-                </header>
-                <div id="content">
-                    <div id="list">
-                        <div id="list-inner">list</div>
-                    </div>
-                    <div id="view" edit="off" active="off">
-                        <div id="view-inner">
-                            <header id="view-navbar">
-                                <div class="panel">
-                                    <button class="box nav-back">돌아가기</button>
-                                    view-navbar
-                                </div>
-                            </header>
-                            <div id="view-content">view-content</div>
-                            <footer id="view-toolbox">view-toolbox</footer>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <script type="text/javascript" src="js/test.js"></script>
-        <script type="text/javascript" src="cordova.js"></script>
-    </body>
+<body>
+    <app>
+        <sidebar active="off"></sidebar>
+        <container>
+            <navigation></navigation>
+            <content>
+                <list></list>
+                <view edit="off" active="off"></view>
+            </content>
+        </container>
+    </app>
+    <script type="text/javascript" src="js/test.js"></script>
+    <script type="text/javascript" src="cordova.js"></script>
+</body>
+
 </html>
