--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,7 @@
     <script src="modules/es6-shim/es6-shim.js"></script>
     <script src="modules/reflect-metadata/Reflect.js"></script>
     <script src="modules/systemjs/dist/system-polyfills.js"></script>
+    <script src="modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
     <!-- Angular2 -->
     <script src="modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="modules/systemjs/dist/system.js"></script>
