--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,7 @@
     <script src="modules/rxjs/bundles/Rx.min.js"></script>
     <script src="modules/angular2/bundles/angular2.js"></script>
     <script src="modules/angular2/bundles/router.js"></script>
+    <script src="modules/jquery/dist/jquery.min.js"></script>
     <base href="/" />
     <script>
         // Configure SystemJS
@@ -37,7 +38,8 @@
             "format": "register",
             "baseURL": "",
             "paths": {
-                 "*": "modules/*"
+                 "*": "modules/*",
+                 "dexie": "modules/dexie/dist/dexie.min"
             }
         });
         
