--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,10 @@
     <script src="modules/angular2/bundles/angular2.js"></script>
     <script src="modules/angular2/bundles/router.js"></script>
     <script src="modules/jquery/dist/jquery.min.js"></script>
+    <!-- IBRoller -->
+    <script src="modules/ibr/ibr.js"></script>
+    <link rel="stylesheet" type="text/css" href="modules/ibr/ibr.css">
+    
     <base href="/" />
     <script>
         // Configure SystemJS
