--- a/www/index.html
+++ b/www/index.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta http-equiv="Content-Security-Policy" content="default-src https: 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline' ws://localhost:*; script-src 'self' 'unsafe-eval' 'unsafe-inline'; media-src *">
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="animation.css">
     <title>rnote</title>
     <script src="cordova.js"></script>
     <!-- IE required -->
