--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,6 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <meta http-equiv="Content-Security-Policy" content="default-src https: 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval' 'unsafe-inline' ws://localhost:*; script-src 'self' 'unsafe-eval' 'unsafe-inline'; media-src *">
     <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="stylesheet" type="text/css" href="animation.css">
     <title>rnote</title>
     <script src="cordova.js"></script>
     <!-- IE required -->
@@ -31,6 +30,7 @@
     <script src="modules/angular2/bundles/angular2.js"></script>
     <script src="modules/angular2/bundles/router.js"></script>
     <script src="modules/jquery/dist/jquery.min.js"></script>
+    <script src="modules/bounce.js/bounce.min.js"></script>
     <!-- IBRoller -->
     <script src="statics/ibr/ibr.js"></script>
     <link rel="stylesheet" type="text/css" href="statics/ibr/ibr.css">
