--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="modules/angular2/bundles/router.js"></script>
     <script src="modules/jquery/dist/jquery.min.js"></script>
     <script src="modules/bounce.js/bounce.min.js"></script>
+    <script src="modules/slipjs/slip.js"></script>
     <!-- IBRoller -->
     <script src="statics/ibr/ibr.js"></script>
     <link rel="stylesheet" type="text/css" href="statics/ibr/ibr.css">
